<resources>
  <string name="app_name">BLINNER</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="username_txt">Username</string>
  <string name="password_txt">Password</string>
  <string name="title_activity_login">Login</string>
  <string name="title_activity_signup">Signup</string>
  <string name="email_txt">Email</string>
  <string name="login_txt">Login</string>
  <string name="signup_txt">Sign up</string>
  <string name="title_activity_main_category">MainCategory</string>
  <string name="title_activity_item">Item</string>
  <string name="logout">Logout</string>
  <string name="profile">Profile</string>
  <string name="title_activity_profile">Your orders</string>
  <string name="title_activity_owner">OwnerActivity</string>
  <string name="refresh">Reload</string>
</resources>