<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fos.com.fos.activity.SignupActivity"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      >
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_txt"
        android:layout_margin="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtUserName"
        android:hint="@string/username_txt"
        android:layout_toRightOf="@id/tvUserName"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/tvUserName"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_below="@id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_txt"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_txt"
        android:layout_toRightOf="@id/tvEmail"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/tvEmail"
        android:layout_alignLeft="@id/edtUserName"
        android:layout_alignRight="@id/edtUserName"
        />
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:layout_margin="10dp"
        android:layout_below="@id/tvEmail"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:hint="@string/password_txt"
        android:layout_toRightOf="@id/tvPassword"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/tvPassword"
        android:layout_alignLeft="@id/edtUserName"
        android:layout_alignRight="@id/edtUserName"
        />
  </RelativeLayout>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/signup_txt"
      android:layout_alignParentBottom="true"
      android:onClick="performSignup"
      />
</RelativeLayout>
